--- a/doxy/latex/index.tex
+++ b/doxy/latex/index.tex
@@ -3,6 +3,6 @@
 \hypertarget{index_autotoc_md0}{}\doxysection{\texorpdfstring{API for level sensor}{API for level sensor}}\label{index_autotoc_md0}
 usage\+:
 \begin{DoxyItemize}
-\item at first ini \href{df/d61/a00031.html}{\texttt{ lvl\+\_\+sens}} instance of level sensor by call \href{dd/dad/a00005.html\#ab388b1960fa20cb2e0ddc6a8316c5202}{\texttt{ Ini\+\_\+\+Lvl\+\_\+sens}}
+\item at first ini \href{d0/d33/a00027.html}{\texttt{ lvl\+\_\+sens}} instance of level sensor by call \href{dd/dad/a00005.html\#ab388b1960fa20cb2e0ddc6a8316c5202}{\texttt{ Ini\+\_\+\+Lvl\+\_\+sens}}
 \item then periodicaly call \href{dd/dad/a00005.html\#a7527fdbdb826936bdf1529357eca12e6}{\texttt{ runtime\+Cycle}} 
 \end{DoxyItemize}
